--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -12,18 +12,18 @@
     "This notebook may be used in Google Colab. To access press this button:    \n",
     "<a href=\"https://colab.research.google.com/github/elzurdo/multi_objective_optimisation/blob/master/02_knapsack_2D_stochastic.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"First: Open In Colab\"/></a>\n",
     "\n",
-    "Here you will learn about implementing Pareto Optimisation into a Genetic Algorithm.  \n",
+    "Here you will learn about implementing Pareto Optimisation with a Genetic Algorithm.  \n",
     "\n",
     "This notebook follows the previous one in which we learned about the fundamentals of Pareto Fronts, where we examined the Knapsack problem in an exhaustive search space. Here we will learn to apply in a search space that is computationally large.  \n",
     "\n",
-    "As in most real life situations that search space is intractable, meaning that we might never have access to all the feasible solutions (baring from introduction of quantum computing). One approach is to search in a stochastic (random) manner. Not completely random, though, we would like to both exploit what we know works as well as explore new regions in the Decision and Objective spaces.  \n",
+    "Most real life situations involve search spaces that are intractable, meaning that we might never have enough computational power to access to all the feasible solutions (baring from introduction of quantum computing). One approach is to search in a stochastic (random) manner. Not completely random, though, we would like to both exploit what we know works as well as explore new regions in the Decision and Objective spaces.  \n",
     "\n",
-    "To this end we will use the Genetic Algorithm as our stochastic search mechanism, where Pareto Fronts appear as its Selection Function as described below. \n",
+    "To this end we will define and use the Genetic Algorithms as our stochastic search mechanism, where Pareto Fronts are used as its *Selection Function* as detailed below. \n",
     "\n",
     "**Main Take Aways**.   \n",
-    "* Two Pareto fronts are always better than one! In a stochastic search Pareto Fronts will vary, but one can benifit from joining set of solutions together to get better results.  \n",
+    "* In a stochastic search no two Pareto front are the same -- but two Pareto fronts are always better than one! You will learn that Pareto Fronts will vary, but one can benifit from joining set of solutions together to get better results.  \n",
     "* The basics of Genetic Algorithms with an emphasis on Pareto Fronts as the selection function.   \n",
-    "* You will see how the Genetic Algorithm learns.\n",
+    "* You will see how the Genetic Algorithm learns by tracking the evolution of the Pareto Front.\n",
     "\n",
     "\n",
     "\n",
@@ -41,7 +41,7 @@
     "\n",
     "We first recommend you be familiar with the fundamentals of Pareto fronts as introduced in the previous notebook. You will notice that some conventions used there are applied here, too.\n",
     "\n",
-    "Do each of the following steps at a time and answer the summary questions to ensure that the main lessons have been learned. \n",
+    "Do each of the following steps at a time and answer the summary questions to ensure that the main lessons have been understood. \n",
     "\n",
     "<ul>\n",
     "      \n",
@@ -351,13 +351,13 @@
     "\n",
     "Here we will create the `n_knapsacks` knapsacks using the `create_knapsacks` function which does two functions: \n",
     "* Decision Space: assigns packages to the knapsack  \n",
-    "* Objective Space: calculates that knap sack weight and the sum of the monetary value of its contents using the `knapsack_objective` function.\n",
+    "* Objective Space: calculates that knapsack weight and the sum of the monetary value of its contents using the `knapsack_objective` function.\n",
     "\n",
     "\n",
     "<img src=\"https://www.chatelaine.com/wp-content/uploads/2019/07/5-most-popular-backpacks-feature.jpg\" width=500>\n",
     "\n",
     "\n",
-    "Each knapsack contains one possible combination of `N_PACKAGES_PER_KNAPSACK` packages (of the total `N_PACKAGES` packages). \n",
+    "Each knapsack contains one feasible combination of `N_PACKAGES_PER_KNAPSACK` packages (of the total `N_PACKAGES` packages). \n",
     "\n",
     "* The `knapsack_objective` function determines the knapsack objective value (`weight`, `value`) by summing those of all its `packages`.  \n",
     "* The `create_knapsacks` function creates `n_knapsacks`. "
@@ -407,7 +407,7 @@
    },
    "outputs": [],
    "source": [
-    "# creates a dictionary of knapsacks\n",
+    "# creates a dictionary of `n_knapsacks` knapsacks\n",
     "\n",
     "def create_knapsacks(n_knapsacks=1000, seed=0, n_packages=N_PACKAGES, n_packages_per_knapsack=N_PACKAGES_PER_KNAPSACK):\n",
     "    knapsacks = {}\n",
@@ -429,9 +429,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To explore the stochastic nature of the problem we will create multiple dictionaries of knapsacks.   \n",
-    "\n",
-    "Here we will see that even though the distributions in Objective Space (weight, value) trace similar trends, each has its own distinct features will impact the Pareto Front.  "
+    "To explore the stochastic nature of the problem we will create multiple dictionaries of knapsacks which we will call *instances*.   "
    ]
   },
   {
@@ -502,8 +500,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Can you identify the Pareto Front for each instance?    \n",
-    "(Beforehand define the Optimisation Objective! E.g, minimising weight and maximising value.)"
+    "In the above we see that even though the distributions in Objective Space (weight, value) trace similar trends, each has its own distinct features that will impact the Pareto Front.  \n",
+    "\n",
+    "Can you identify by eye the Pareto Front for each instance?    \n",
+    "(Beforehand you will need define the Optimisation Objectives! E.g, minimising weight and maximising value.)"
    ]
   },
   {
