--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -566,7 +566,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pareto Front Calculation"
+    "# Pareto Front Calculation\n",
+    "`knapsacks_to_pareto_front` is a function with the same algorithm used in the previous notebook, where:  \n",
+    "* input: dictionary of knapsacks\n",
+    "* output: list of indexes of knapsacks that are Pareto optimal\n",
+    "\n",
+    "Here we will calculate the Pareto front for each of the instances."
    ]
   },
   {
@@ -654,7 +659,7 @@
     }
    ],
    "source": [
-    "# visualising the knapsack set instances with an emphasis on the Pareto Fronts\n",
+    "# visualising the knapsack set instances with an emphasis on the Pareto fronts\n",
     "\n",
     "nplots = n_instances\n",
     "ncols = 4\n",
@@ -683,10 +688,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Did you manage to correct the Pareto Fronts correctly for each instance? \n",
+    "Did you manage to correct the Pareto fronts correctly for each instance? \n",
     "\n",
     "We clearly see that each instance is a subset of the full space resulting in wildly different Pareto front estimates. \n",
-    "By estimate we refer to the fact that the Pareto front of each instance isn't the aboslute front for all the possible knapsacks. For this purpose we will later use a Genetic Algorithm to get us as close as possible to the true Pareto fron.\n",
+    "By estimate we refer to the fact that the Pareto front of each instance isn't the aboslute front for all the possible knapsacks. For this purpose we will later use a Genetic Algorithm to get us as close as possible to the true Pareto front.\n",
     "\n",
     "To conclude this section we will see that we can combine the four instances to one to obtain a mutual Pareto front which is better than each individual."
    ]
@@ -827,8 +832,12 @@
     "This image uses DNA snippets to illustrate the how the crossover tranformation may be generate two children solutions from two parents.  \n",
     "\n",
     "In this analogy:  \n",
-    "* The DNA strip corresponds to a knapsack\n",
-    "* The nucleotides (`A`, `C`, `G`, `T`) correspond to the packages (except for the fact that we are using unique packages).\n"
+    "* A DNA strip corresponds to a knapsack\n",
+    "* The nucleotides (`A`, `C`, `G`, `T`) correspond to the packages (except for the fact that we are using unique packages).\n",
+    "\n",
+    "Here we present a few functions \n",
+    "* `cross_over_2_indvs` - takes in two parents and crosses them over to two children\n",
+    "* `crossover_knapsacks` - takes in all the knapsacks and separates them to pairs of parents and then run them through  `cross_over_2_indvs` which will result in `len(knapsacks)` children. "
    ]
   },
   {
@@ -1035,6 +1044,8 @@
     }
    ],
    "source": [
+    "# Examining the Decision Space (packages) of one pair of parents their resulting cross over children.\n",
+    "\n",
     "idx_parent1 = 4\n",
     "assert idx_parent1 % 2 == 0\n",
     "knapsacks_plot = {'parent 1': population[idx_parent1], 'parent 2': population[idx_parent1 + 1],\n",
@@ -1106,12 +1117,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The color coding is as follows: \n",
+    "* Purple packages are those that originate from only parent 1\n",
+    "* Green packages are those that originate from only parent 2\n",
+    "* Orange packages are those that originate from both parent 1 and 2\n",
+    "\n",
+    "We see that both children's packages are crossed over from both parents."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Mutation\n",
     "\n",
     "![mutation](https://user-images.githubusercontent.com/6064016/97843727-b54eed00-1ce1-11eb-943f-c725b7fc49ed.png)\n",
     "\n",
     "\n",
-    "Hera again we DNA snippets to illustrate the how the mutation tranformation may be applied to one parent solutions to generate one child."
+    "Here again we use DNA snippets to illustrate the how the mutation tranformation may be applied to one parent solutions to generate one child.\n",
+    "\n",
+    "We will use the function `mutate_knapsack` that takes in an individual knapsack and replaces `n_mutate` packages to created a mutated child knapsack."
    ]
   },
   {
@@ -1137,11 +1162,7 @@
     "    for i, loc in enumerate(loc_mutate):\n",
     "        indv_package_idxs_[loc] = new_package_idxs[i]\n",
     "    \n",
-    "    return indv_package_idxs_\n",
-    "    \n",
-    "    \n",
-    "#print(knapsacks_instances[0][1]['packages'])\n",
-    "#print(mutate_knapsack(knapsacks_instances[0][1]['packages'], list(packages.keys()), n_mutate=5, seed=2 ))"
+    "    return indv_package_idxs_"
    ]
   },
   {
@@ -1166,7 +1187,7 @@
    ],
    "source": [
     "all_packages = list(packages.keys())\n",
-    "n_packages_mutate = 2    # change me!\n",
+    "n_packages_mutate = 2    # CHANGE ME!\n",
     "seed = 2\n",
     "\n",
     "idx_indv = 0\n",
@@ -1182,7 +1203,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fitness Evaluation"
+    "## Fitness Evaluation\n",
+    "\n",
+    "The fitness is determining the values of the objectives (weight, value) for which we will use `knapsack_objective`, same as in the previous notebook.\n",
+    "\n",
+    "Here we will apply the algorithm to three of the children generated above (two from crossover, one from mutation) and examine how competitive they are against the original population."
    ]
   },
   {
@@ -1210,6 +1235,8 @@
     }
    ],
    "source": [
+    "# defining the new generation\n",
+    "\n",
     "population_born = {'child 1': {'packages':child1}, 'child 2': {'packages':child2}, \n",
     "                   'individual_mutated': {'packages': individual_mutated}\n",
     "                  }\n",
@@ -1246,6 +1273,8 @@
     }
    ],
    "source": [
+    "# evaluating the fitness of the new generation\n",
+    "\n",
     "for _, indv in population_born.items():\n",
     "    for objective in objectives:\n",
     "        knapsack_objective(indv, objective, packages)\n",
@@ -1286,6 +1315,8 @@
     }
    ],
    "source": [
+    "# visualising the population and the new population\n",
+    "\n",
     "plt.scatter([knapsacks['weight'] for _, knapsacks in population.items()],\n",
     "                [knapsacks['value'] for _, knapsacks in population.items()],\n",
     "                s=100, alpha=0.4, color='purple', label='original population')\n",
@@ -1304,7 +1335,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Selection"
+    "Results might differ, but there is not reason to be surprised if the results of the children (squares) are not Pareto optimal. That is the stochastic nature of this calculation! At times we will get children that beat their parents, but not always (think of the children of Albert Einstein and Michael Jordan)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Selection\n",
+    "\n",
+    "This is where the Pareto front gets into action!  \n",
+    "\n",
+    "Imagine that we have a population competing to continue to the next generation. We need to choose a subset.  \n",
+    "We could naively take only the Pareto front -- but if there aren't many solutions there we will have a drop in diversity.  For this reason we need to choose in advance the number individuals to progress to the next iteration. \n",
+    "\n",
+    "Once this is decided there \n",
+    "\n",
+    "\n",
+    "\n",
+    "There are various algorithms that use the concept of Pareto optimality.  \n",
+    "Here I describe a fairly simplistic one.  \n",
+    "\n",
+    "**Pseudocode**\n",
+    "\n",
+    "* input - `n_selection` determines the number of knapsacks to select for the next generation\n",
+    "* \n",
+    "\n",
+    "TBD  \n",
+    "```python\n",
+    "while n_chosen < n_selection:\n",
+    "    ...\n",
+    "```"
    ]
   },
   {
