--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -1335,7 +1335,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Results might differ, but there is not reason to be surprised if the results of the children (squares) are not Pareto optimal. That is the stochastic nature of this calculation! At times we will get children that beat their parents, but not always (think of the children of Albert Einstein and Michael Jordan)"
+    "The visual above shows the distribution of the parent population (circles) and some selected children (squares).   \n",
+    "\n",
+    "Results might differ by configuration, but generally speaking:  \n",
+    "There is not reason to be surprised if the children solutions/knapsacks are not Pareto optimal. That is the stochastic nature of this technique! At times we will get children that beat their parents, but not always (as an exterme case - we shouldn't always expect the children of Albert Einstein or Michael Jordan to perform better than their parents)."
    ]
   },
   {
@@ -1344,28 +1347,60 @@
    "source": [
     "## Selection\n",
     "\n",
-    "This is where the Pareto front gets into action!  \n",
+    "This is where the Pareto front technique gets used!  \n",
     "\n",
-    "Imagine that we have a population competing to continue to the next generation. We need to choose a subset.  \n",
-    "We could naively take only the Pareto front -- but if there aren't many solutions there we will have a drop in diversity.  For this reason we need to choose in advance the number individuals to progress to the next iteration. \n",
+    "Imagine that we have a population competing to continue to the next generation. We need to choose a subset of the \"most fit\".   \n",
     "\n",
-    "Once this is decided there \n",
+    "We could just take the Pareto optimal solutions.   \n",
+    "That might not be adequate in exterme cases where we have a small set (e.g, of one), because this will result in a lack of diversity.  \n",
     "\n",
+    "For this reason we need to choose in advance the number individuals to progress to the next iteration. We'll call this `n_selection`.  \n",
     "\n",
+    " \n",
+    "There are various algorithms that use the concept of Pareto optimality to choose the most diverse `n_selection` solutions.  \n",
     "\n",
-    "There are various algorithms that use the concept of Pareto optimality.  \n",
-    "Here I describe a fairly simplistic one.  \n",
+    "Here I describe a fairly simplistic one and will provide material on more advanced techniques.  \n",
+    "\n",
+    "Let's look at is pseudocode, first.  \n",
     "\n",
     "**Pseudocode**\n",
     "\n",
-    "* input - `n_selection` determines the number of knapsacks to select for the next generation\n",
-    "* \n",
+    "* input\n",
+    "    * `population` - list or dictionary of solutions from which we want to select from\n",
+    "    * `n_selection` - determines the number of knapsacks to select for the next generation\n",
+    "    * `exact_n_selection` - boolean determining if we need exactly `n_selection` or if we can go a bit over\n",
+    "* output\n",
+    "    * `pareto_fronts` - a list where each item is a list of indexes of the individuals that comprise of the pareto front. \n",
     "\n",
-    "TBD  \n",
+    " \n",
     "```python\n",
-    "while n_chosen < n_selection:\n",
-    "    ...\n",
-    "```"
+    " \n",
+    "population_remaining = population\n",
+    "individuals_selected = []\n",
+    "pareto_fronts = []\n",
+    "while len(individuals_selected) < n_selection:\n",
+    "    these_selected = find_pareto_optimal(population_remaining)\n",
+    "    \n",
+    "    # --- fro exact_n_selection=True we update these_selected ---\n",
+    "    if exact_n_selection:\n",
+    "         n_iterim_selected = len(n_these_selected) + len(individuals_selected)\n",
+    "        if n_iterim_selected > n_selection:\n",
+    "            n_subset = n_selection - len(individuals_selected)\n",
+    "            these_selected = choose_random(these_selected, n_subset)\n",
+    "    # ------\n",
+    "             \n",
+    "    pareto_fronts.append(these_selected)\n",
+    "    \n",
+    "    individuals_selected.append(these_selected)  # updating the selected\n",
+    "    population_remaining -= population_remaining # updating the remaining population\n",
+    "    \n",
+    "```\n",
+    "\n",
+    "Example:  \n",
+    "E.g, for `n_selection=7`, `exact_n_selection` we could imagine getting back  `pareto_fronts=[[17, 49, 83], [5, 58, 25, 49]]`. This means that individuals  `[17, 49, 83]` comprise of the first Pareto front, but because it has less than 7 items, we also select an additional 4 from the next Pareto front (after excluding the first) resulting in `[5, 58, 25, 49]`. \n",
+    "\n",
+    "\n",
+    "For the purpose of this demo we'll call this algorithm a Naive Pareto Selector.  "
    ]
   },
   {
@@ -1390,8 +1425,10 @@
     }
    ],
    "source": [
-    "N_SELECTION = 10\n",
-    "exact_n_selection = False\n",
+    "# naive pareto selector applied on the knapsacks\n",
+    "\n",
+    "N_SELECTION = 10           # CHANGE ME!  the number of individuals to be selected (examine in visual below)\n",
+    "exact_n_selection = False  # CHANGE ME!  determines the number of individuals selected for the final pareto front (visual below)\n",
     "\n",
     "idxs_knapsacks_selected = []\n",
     "\n",
@@ -1442,6 +1479,8 @@
     }
    ],
    "source": [
+    "# visualising the outcome of the naive pareto selector\n",
+    "\n",
     "max_size = 1000\n",
     "for ipareto, pareto_front in enumerate(pareto_fronts):\n",
     "    size = max_size * (1. - ipareto/6)\n",
@@ -1463,11 +1502,78 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In this visual we can see the how the Naive Pareto Selector works.  \n",
+    "Given the optimisation objectives it first selects all the Pareto optimal solutions, markeds as blue large stars.  \n",
+    "If this number is less than `n_selection` it goes for the next Pareto front marked as slighly smaller orange stars. This continues until `n_selection` is reached.    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This concludes the components of the Genetic Algorithm.  \n",
+    "Let's put them together to see learning in action!  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Knacksack Optimisation\n",
     "\n",
     "Now we'll put all the components together and examine the evolution of the Pareto front estimates of the Knapsack problem!\n",
     "\n",
-    "<img src=\"https://i.pinimg.com/originals/1a/5c/a8/1a5ca8373a83e8e84f8f268ee3ecf1de.png\" width=700>\n"
+    "<img src=\"https://i.pinimg.com/originals/1a/5c/a8/1a5ca8373a83e8e84f8f268ee3ecf1de.png\" width=700>\n",
+    "\n",
+    "The next two cells comprise of scripts that generate the initial population and apply selection.  \n",
+    "\n",
+    "We will compare results of two different selectors: \n",
+    "* `naive_pareto_selector` - which we learned above. Remember, this uses the advantages of Pareto optimisation: gives a broader scope for exploring the landscape.  \n",
+    "* `single_objective_selector` - single objective optimisation discusses in the previous notebook. This is the more common approach of combining multiple paremters into one single heuristic. \n",
+    "\n",
+    "Whereas the Single Objective Optimisation is likely to be faster and demand less cognitive effort from the user, it is more likely to result in suboptimal solutions copared to the Pareto optimal selector. \n",
+    "\n",
+    "Still skeptic? You should be.  \n",
+    "Let's find out by applying to the knapsack problem!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Just beforehand, some more maintenance.  \n",
+    "\n",
+    "We need to determine the probablity of each parent to transform to children. Some will crossover, some will mutate:  \n",
+    "* `PROB_CROSS_OVER` - probability of parent to create child by crossover\n",
+    "* `PROB_MUTATION` - probability of parent to create child by mutation  \n",
+    "\n",
+    "* `PARENTS_COMPETE` is a boolean that determiness if parents compete with the children for the next generation. This is where the analogy to humans breaks down ... unless you are a fan of [The Highlander](https://en.wikipedia.org/wiki/Highlander_(film)), geek paraphrasing: \"There can be ~only~ [$\\ge$] one!\").  \n",
+    "\n",
+    "\n",
+    "<img src=\"https://i.ytimg.com/vi/Oc9fUbjJbAU/maxresdefault.jpg\" width=700>\n",
+    "\n",
+    "\n",
+    "If  `PARENTS_COMPETE=False` the parents do not compete, but they can still create a children as an exact replicates with probability   \n",
+    "`replicate_prob= 1 - PROB_CROSS_OVER - PROB_MUTATION`  \n",
+    "\n",
+    "Friendly reminder:  In the first stage there is no need to understand all the lines of Python below. It's enough to have a general idea what each function does."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -- selection --\n",
+    "PARENTS_COMPETE = True   # CHANGE ME! True: parents will compete for selection with the children. False: only children compete\n",
+    "\n",
+    "# -- mating --\n",
+    "PROB_CROSS_OVER = 0.6    # CHANGE ME! probability that any parent may craete a child by mating with another parent\n",
+    "\n",
+    "# -- mutation --\n",
+    "PROB_MUTATION = 0.4      # CHANGE ME! probability that any parent may create a child by mutating itself\n",
+    "N_PACKAGES_MUTATE = 2    # CHANGE ME! number of packages used for the process of mutation"
    ]
   },
   {
@@ -1481,16 +1587,7 @@
    },
    "outputs": [],
    "source": [
-    "# -- selection --\n",
-    "PARENTS_COMPETE = True   # True: parents will compete for selection with the children. False: only children compete\n",
-    "\n",
-    "# -- mating --\n",
-    "PROB_CROSS_OVER = 0.6    # probability that any parent may craete a child by mating with another parent\n",
-    "\n",
-    "# -- mutation --\n",
-    "PROB_MUTATION = 0.4      # probability that any parent may create a child by mutating itself\n",
-    "N_PACKAGES_MUTATE = 2    # number of packages used for the process of mutation\n",
-    "\n",
+    "# selection function algorithms\n",
     "\n",
     "def naive_pareto_selector(population, n_select=20, exact_n_selection = False):\n",
     "    population_remaining = population.copy()\n",
@@ -1522,8 +1619,18 @@
     "def single_objective_selector(population, n_select=20, objective='value_weight_ratio'):    \n",
     "    population_sorted = {k: v for k, v in sorted(population.items(), key=lambda indv: indv[1][objective], reverse=True)} \n",
     "    \n",
-    "    return {k: population_sorted[k] for k in list(population_sorted.keys())[:n_select]} \n",
+    "    return {k: population_sorted[k] for k in list(population_sorted.keys())[:n_select]} "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# algorithms for creation of children\n",
     "\n",
+    "# creates the children\n",
     "def create_children(idx_indv_start, idxs_parents, population_parents, n_packages_mutate=None):\n",
     "    idxs_chidren = {}\n",
     "    \n",
@@ -1567,6 +1674,7 @@
     "    return population_children, idxs_chidren\n",
     "    \n",
     "\n",
+    "# determines the parents indices for replication, mutation, mating\n",
     "def population_tranformations_idxs(idxs_parents, cx_prob, mutate_prob, parents_compete=True, seed=None):\n",
     "    np.random.seed(seed)\n",
     "    \n",
@@ -1601,6 +1709,9 @@
    },
    "outputs": [],
    "source": [
+    "# the main part of the algorithm\n",
+    "\n",
+    "# logging the individuals\n",
     "def _update_log(gen_num, this_gen, all_gens):\n",
     "    for idx_indv in this_gen:\n",
     "        if 'generations' not in all_gens[idx_indv]:\n",
@@ -1608,6 +1719,7 @@
     "        all_gens[idx_indv]['generations'].append(gen_num)\n",
     "        \n",
     "\n",
+    "# visualising pareto fronts\n",
     "def plot_pareto_front(population, objective_to_sort='weight', label=None, marker='-o', color=None, linewidth=None, alpha=0.7, markersize=None):\n",
     "\n",
     "    pareto_front_idxs = knapsacks_to_pareto_front(population)\n",
@@ -1619,6 +1731,8 @@
     "             [indv['value'] for _, indv in population_sorted.items()], marker,\n",
     "                     alpha=alpha, color=color, label=label, linewidth=linewidth, markersize=markersize)\n",
     "    \n",
+    "\n",
+    "# the genetic algorithm\n",
     "def knapsack_genetic_algorithm(n_generations, n_initial_poppulation=None, n_packages_mutate=None, \n",
     "                               cx_prob=None, mutate_prob=None, seed=None, exact_n_selection=False, \n",
     "                               parents_compete=None, selector='pareto_naive', visualise=True, display_pareto_front=True):\n",
@@ -1749,11 +1863,13 @@
     }
    ],
    "source": [
-    "n_generations = 20\n",
-    "parents_compete = True\n",
-    "selector = 'pareto_naive' # 'single_objective_optimisation'\n",
-    "display_pareto_front = True\n",
-    "seed = 1\n",
+    "# running the knapsack problem with a genetic algorithm\n",
+    "\n",
+    "n_generations = 20           # CHANGE ME! Number of iterations\n",
+    "parents_compete = True       # CHANGE ME!\n",
+    "selector = 'pareto_naive'    # Leave this selection function method. Below we compare with 'single_objective_optimisation'\n",
+    "display_pareto_front = True  # Visualises the Pareto front \n",
+    "seed = 1                     # CHANGE ME! For different distributions and runs\n",
     "\n",
     "population_all_pareto = knapsack_genetic_algorithm(n_generations, seed=seed, selector=selector, \n",
     "                                                   exact_n_selection=True,\n",
@@ -1765,6 +1881,30 @@
     "ax = plt.gca()\n",
     "x_lim = ax.get_xlim()\n",
     "y_lim = ax.get_ylim()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above visual shows:  \n",
+    "* green Xs - all competing individuals in the first generation\n",
+    "* solid line - Pareto front of the first generation  \n",
+    "\n",
+    "If you selected `n_generations>1` you will also see  \n",
+    "* light greeen Xs - all competing individuals in the last generation\n",
+    "* light solid line - Pareto front of the last generation  \n",
+    "* dashed lines (for `n_generations>2`) - Pareto fronts of all intermediate generations  \n",
+    "\n",
+    "Tracking the pareto front lines you should get a clear picture of how the genetic algorithm found better solutions.  \n",
+    "\n",
+    "By increasing `n_generations` you will see improvement, until a certain point in which there is no reall cost benefit.  This does not mean that we have found the true Pareto front of this problem. But rather it got stuck in one (or more) local minima.  \n",
+    "\n",
+    "Solving for this is out of the scope of this demo and requires further exploration.  \n",
+    "\n",
+    "But in the meanwhile let's compare results with the same algorithm that uses a different selection function: Single Objective Optimisation.  \n",
+    "\n",
+    "How do you think that they will compare?"
    ]
   },
   {
