genenalising knapsack_to_soh to all 4 single objective heuristics

--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -1589,6 +1589,7 @@
    "source": [
     "# selection function algorithms\n",
     "\n",
+    "# same algorithm as above\n",
     "def naive_pareto_selector(population, n_select=20, exact_n_selection = False):\n",
     "    population_remaining = population.copy()\n",
     "    \n",
@@ -1613,8 +1614,19 @@
     "            \n",
     "    return pareto_fronts,  individuals_selected\n",
     "\n",
+    "\n",
+    "# calculating the single objective heuristic for each knapsack (soh) \n",
+    "# same function as in the previous notebook\n",
     "def knapsack_to_soh(knapsack):\n",
-    "    return knapsack['value'] / knapsack['weight']\n",
+    "    # generalising \n",
+    "    # (weight,value) : returns single-objective-heuristic\n",
+    "    # (↓, ↑) : returns knapsack['value'] / knapsack['weight'] \n",
+    "    # (↑, ↑) : returns knapsack['value'] * knapsack['weight'] \n",
+    "    # etc.\n",
+    "    \n",
+    "    value_heuristic    = direction_to_multiplier[objective_mode['value']](1, knapsack['value'])\n",
+    "    weight_heuristic   = direction_to_multiplier[objective_mode['weight']](1, knapsack['weight'])\n",
+    "    return  value_heuristic * weight_heuristic\n",
     "\n",
     "def single_objective_selector(population, n_select=20, objective='value_weight_ratio'):    \n",
     "    population_sorted = {k: v for k, v in sorted(population.items(), key=lambda indv: indv[1][objective], reverse=True)} \n",
@@ -1888,11 +1900,11 @@
    "metadata": {},
    "source": [
     "The above visual shows:  \n",
-    "* green Xs - all competing individuals in the first generation\n",
+    "* green squares - all competing individuals in the first generation\n",
     "* solid line - Pareto front of the first generation  \n",
     "\n",
     "If you selected `n_generations>1` you will also see  \n",
-    "* light greeen Xs - all competing individuals in the last generation\n",
+    "* greeen Xs - all competing individuals in the last generation\n",
     "* light solid line - Pareto front of the last generation  \n",
     "* dashed lines (for `n_generations>2`) - Pareto fronts of all intermediate generations  \n",
     "\n",
